...
fun ScreenLayout(
    title: String,
    subtitle: String,
    content: LazyListScope.() -> Unit,
) {
    LazyColumn(
        modifier = Modifier.testTag("screen-layout-list"),
        contentPadding = PaddingValues(
            horizontal = TathbeetTokens.spacing.x2Half,
            vertical = TathbeetTokens.spacing.x2Half,
        ),
        verticalArrangement = Arrangement.spacedBy(TathbeetTokens.spacing.x2),
    ) {
...
